<resources>
    <string name="app_name">Video Manager</string>

    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start">start activity</string>
    <string name="title_activity_filters">Filters</string>

    <string name="hello_world">Hello world!</string>
    <string name="downloadVideo">Download</string>
    <string name="openCamera">Camera</string>
    <string name="menuCamera"> </string>
    <string name="fromSDcard"> from SD card</string>
    <string name="fromAccount"> from your account</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="share">Share with...</string>
</resources>
